PDB-06: Add user interface
* Added initial structure for user interface
* Prepared project file structure
* Connected backend to frontend
* Added pagination and filtering to getPersons
* Added CRUD operations and simple UI design
* Fixed backend calls
* Regenerated new openapi specification code
* Added modals for UI components
* Added summary list of persons
* Updated README.md
